ENHANCEMENT: File/Image UI fixes
* Replaced cancel/delete button in files area
* Fixed null object error
* Consolidated Image upload styles with AssetUpload styles
* Changed name of step 2 in image upload
* Made image editing hidden by default, so multiple files can be seen,
and added ability top open and close

--- a/scss/GridField.scss
+++ b/scss/GridField.scss
@@ -66,7 +66,7 @@ $gf_grid_x:	16px;
 			span.btn-icon-download-csv {
 				height:17px; //exact height of icon
 			}
-			span.ui-button-text {
+			.ui-button-text {
 				padding-left:26px; //to accomodate wider export icon
 			} 
 	 	}
